<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="a12_monet">Dynamic theming based on wallpaper</string>
    <string name="a12_monet_desc">replaces current theme and accent</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_contacts">Useful links</string>
    <string name="acc_friends">Friends</string>
    <string name="acc_groups">Groups</string>
    <string name="acc_header">Sections</string>
    <string name="acc_header2">Application</string>
    <string name="acc_news">News</string>
    <string name="acc_news_desc">Access to newsfeed</string>
    <string name="acc_podcasts">Podcasts (beta)</string>
    <string name="acc_podcasts_desc">Access to VK podcasts</string>
    <string name="acc_podcasts_feed">Podcasts (feed)</string>
    <string name="acc_podcasts_feed_desc">Recommended and popular podcasts</string>
    <string name="acc_pop_desc">Popular audios in your region</string>
    <string name="acc_prefs">Preferences</string>
    <string name="acc_rec_desc">Recommendations based on your library</string>
    <string name="acc_sub_disclaimer">VK X is not connected to VK and does not require purchase of a music subscription to work.\n\nThis page allows you to view your current subscription status - you can\'t cancel or start it here.</string>
    <string name="acc_sub_expires_at">Expires at %s</string>
    <string name="acc_sub_payment_method">Payment method</string>
    <string name="acc_sub_started_at">Started at %s</string>
    <string name="acc_sub_view">Music subscription</string>
    <string name="acc_sub_view_desc">View current VK Music subscription (if it was applied)</string>
    <string name="acc_updates">Friend updates</string>
    <string name="acc_wall">Wall</string>
    <string name="account_category">Additional</string>
    <string name="account_category_desc">More features for power users</string>
    <string name="action_audio_add">Add to library</string>
    <string name="action_audio_addtoplaylist">Add to playlist</string>
    <string name="action_audio_artist">Go to artist</string>
    <string name="action_audio_cache">Cache</string>
    <string name="action_audio_dl">Download as MP3</string>
    <string name="action_audio_dl2">Download</string>
    <string name="action_audio_playnext">Play next</string>
    <string name="action_audio_remove">Remove from library</string>
    <string name="action_audio_search">Search by artist</string>
    <string name="action_audio_similar">Show similar tracks</string>
    <string name="action_audio_toalbum">Open album</string>
    <string name="action_audio_tolyrics">Show track lyrics</string>
    <string name="action_copy_playlist">Copy playlist</string>
    <string name="add_id3_desc">Add ID3 tags to MP3 files</string>
    <string name="add_notify">Adding %s</string>
    <string name="additional_tagging_genius">Download lyrics with MP3 files</string>
    <string name="additional_tagging_genius_desc">downloading will be significantly longer!\n\nsynchronized lyrics will be saved as LRC file in the same folder\nplain lyrics will be embedded into MP3 file</string>
    <string name="additional_tagging_itunes">Additional tagging using iTunes</string>
    <string name="additional_tagging_itunes_desc">downloading will be longer</string>
    <string name="alert_cache_desc">You can now choose between artists, albums and playlists in the selector above.\n\nHere is your *Virtual Library*, a place where all your cached tracks are.</string>
    <string name="alert_cache_title">Where are my tracks and playlists?</string>
    <string name="alert_close">Got it!</string>
    <string name="also_delete_from_cache">Also delete from cache</string>
    <string name="analytics_vk">Send track information</string>
    <string name="android_auto_entrypoint">Android Auto</string>
    <string name="android_auto_setup">How to setup Android Auto?</string>
    <string name="android_auto_setup_five">Check \"Unknown sources\".</string>
    <string name="android_auto_setup_four">Open the menu (three dots) and click \"For developers\".</string>
    <string name="android_auto_setup_info">VK X is not on Google Play - that\'s why you need to do some extra steps to get started.</string>
    <string name="android_auto_setup_one">Open Android Auto settings on your phone.</string>
    <string name="android_auto_setup_six">You\'re done! Enjoy Android Auto support.</string>
    <string name="android_auto_setup_start">Open Android Auto</string>
    <string name="android_auto_setup_three">Agree and unlock developer settings.</string>
    <string name="android_auto_setup_two">Scroll down and click on \"Version\" approximately 7–8 times.</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animreduce_section_nav">Disable tab switching animation</string>
    <string name="app_name">Museeks</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artistmenu_remove_from_blacklist">Unblock</string>
    <string name="artistmenu_remove_from_favourites">Remove from favourites</string>
    <string name="artistmenu_to_blacklist">Block</string>
    <string name="artistmenu_to_cache">Cache</string>
    <string name="artistmenu_to_favourites">Add to favourites</string>
    <string name="artistmenu_to_mp3">Download as MP3</string>
    <string name="audio_picker_header">Pick tracks</string>
    <string name="audiobooks_unsupported_text">VK X does not support VK audiobooks, but we are working on bringing them to you. Check back later!</string>
    <string name="audiobooks_unsupported_title">Audiobooks are in progress</string>
    <string name="auth2_acc_manager_add">Add account</string>
    <string name="auth2_acc_manager_delete">Delete account</string>
    <string name="auth2_acc_manager_delete_cancel">Cancel</string>
    <string name="auth2_acc_manager_delete_confirm">Confirm</string>
    <string name="auth2_acc_manager_delete_text">Are you sure you want to delete this account?\n\nThis will not delete downloaded content.</string>
    <string name="auth2_acc_manager_entry_text">Sign out or add another account</string>
    <string name="auth2_acc_manager_entry_title">Account manager</string>
    <string name="auth2_acc_manager_title">Saved accounts</string>
    <string name="auth2_captcha">Enter the code from the picture</string>
    <string name="auth2_choose_another_method">Choose another method</string>
    <string name="auth2_code">Code</string>
    <string name="auth2_method_callreset_method_desc">Enter the code from a caller\'s phone number</string>
    <string name="auth2_method_callreset_method_title">Callback call</string>
    <string name="auth2_method_callreset_text">You will receive a call to the linked phone number. Enter the last %s digits from the caller\'s phone number</string>
    <string name="auth2_method_callreset_title">Enter code from a phone number</string>
    <string name="auth2_method_codegen_method_desc">Use the linked 2FA code generating app</string>
    <string name="auth2_method_codegen_method_title">Code generating app</string>
    <string name="auth2_method_codegen_text">Open your linked code generating app to see the code</string>
    <string name="auth2_method_codegen_title">Enter code from an app</string>
    <string name="auth2_method_email_method_desc">Enter the code from an e-mail message</string>
    <string name="auth2_method_email_method_title">E-mail</string>
    <string name="auth2_method_email_text">The e-mail was sent to \"%s\"</string>
    <string name="auth2_method_email_title">Enter code from an e-mail</string>
    <string name="auth2_method_push_method_desc">Send a notification to another device linked to VK ID</string>
    <string name="auth2_method_push_method_title">Push notification</string>
    <string name="auth2_method_push_text">The push notification was sent to \"%s\"</string>
    <string name="auth2_method_push_title">Enter code from push</string>
    <string name="auth2_method_reserve_method_desc">Enter the single-use backup code</string>
    <string name="auth2_method_reserve_method_title">Backup code</string>
    <string name="auth2_method_reserve_text">Enter one of the single-use backup codes for your VK ID account</string>
    <string name="auth2_method_reserve_title">Enter backup code</string>
    <string name="auth2_method_sms_method_desc">Enter the code sent to an SMS message</string>
    <string name="auth2_method_sms_method_title">SMS code</string>
    <string name="auth2_method_sms_text">The code was sent to %s</string>
    <string name="auth2_method_sms_title">Enter code from SMS</string>
    <string name="auth2_method_with_info">Enter the code sent to %s</string>
    <string name="auth2_methods">Verification methods</string>
    <string name="auth2_not_received">I have not received the code</string>
    <string name="auth2_password_action">Continue</string>
    <string name="auth2_password_hint">Password</string>
    <string name="auth2_password_method_desc">Enter VK ID account password</string>
    <string name="auth2_password_method_title">Password</string>
    <string name="edit_audio_apply">Save</string>
    <string name="edit_audio_author">Artist</string>
    <string name="edit_audio_desc">Description</string>
    <string name="edit_audio_name">Title</string>
    <string name="edit_playlist_dialog">Edit playlist</string>
    <string name="logout">Logout</string>
    <string name="search_hint_2">Search</string>
    <string name="search_empty">Ничего не найдено</string>
    <string name="profile_login_prompt">Войдите, чтобы увидеть свой профиль</string>
    <string name="profile_tracks">Треки</string>
    <string name="profile_playlists">Плейлисты</string>
    <string name="profile_friends">Друзья</string>
    <string name="login">Войти</string>
    <string name="back">Назад</string>
</resources>