<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/start_pair"
    android:paddingTop="16dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_root"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxBackgroundColor="?attr/pref_card_bg"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="?attr/text_secondary"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="?attr/text_primary"
            android:textColorHint="?attr/text_secondary"
            android:id="@+id/title"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_audio_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/artist_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="?attr/pref_card_bg"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="?attr/text_secondary"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="?attr/text_primary"
            android:textColorHint="?attr/text_secondary"
            android:id="@+id/artist"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_audio_author"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:textColor="?attr/text_primary"
        android:id="@+id/save"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_audio_apply"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="?attr/pref_card_bg"
        app:cornerRadius="@dimen/vkx_corner_radius"
        style="@style/Widget.Material3.Button.UnelevatedButton"/>
</LinearLayout>
