<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/root"
    android:background="?android:attr/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="start"
            android:id="@+id/toolbar_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:tint="?attr/text_primary"/>
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/text_primary"
            android:layout_gravity="center_horizontal"
            android:id="@+id/toolbar_header"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_playlist_dialog"/>
        <ImageView
            android:layout_gravity="end"
            android:id="@+id/toolbar_apply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_check"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:tint="?attr/text_primary"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <FrameLayout
            android:id="@+id/image_zone"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="8dp">
            <ImageView
                android:id="@+id/image_actual"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/placeholder_playlist"/>
            <ImageView
                android:id="@+id/image_overlay"
                android:background="@drawable/playing_overlay"
                android:padding="16dp"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_picture_outline_28"/>
        </FrameLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_root"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="?attr/bg_primary"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            style="@style/Widget.Material3.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="?attr/text_primary"
                android:id="@+id/title"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_audio_name"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_root"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="?attr/bg_primary"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="?attr/text_primary"
            android:id="@+id/desc"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_audio_desc"
            android:maxLines="3"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>
    <include
        android:id="@+id/playlist_privacy"
        layout="@layout/libprefs_switch"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracklist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</LinearLayout>
